--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
+    "mysql2": "^3.11.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
