--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.8"
-  },
-  "devDependencies": {
+    "tailwindcss": "^3.4.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
