--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
-    "dev:next": "next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "start:next": "next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,7 +13,9 @@
     "mysql2": "^3.11.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.4.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
