--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
-    "mysql2": "^3.11.0",
+    "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.41"
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.8"
   }
 }
